# HyperTradeX

./: .gitattributes  .gitignore  Backtester.cpp  Backtester.h  CMakeLists.txt  IEX.cpp  LICENSE  Makefile  README.md  TechnicalAnalysis.cpp  TechnicalAnalysis.h  aliases.sh  config.json  fetch_yahoo.py  run.sh  test_backtest  test_backtest.cpp  trades.csv
data/: AAPL_1y.json  BTCUSDT_1m.csv  GOOGL_1y.json
docs/: data_loader.md  data_loader_cpp.md  parser.md  replay_engine.md  strategy.md  types.txt
include/: Backtester.h  JSONdata.h  Strategy.h  TechnicalAnalysis.h
performance_reports/: performance_AAPL_1y.txt  performance_GOOGL_2y.txt  trades_AAPL_1y.csv  trades_GOOGL_2y.csv
scripts/: compare_stocks.py
src/: JSONdata.cpp  TechnicalAnalysis.cpp  binance_client.cpp  binance_client.h  data_loader.cpp  data_loader.h  debug_api.cpp  executor.cpp  executor.h  fetch_yahoo.py  main.cpp  main_api.cpp  metrics.cpp  metrics.h  parser.cpp  parser.h  replay_engine.cpp  replay_engine.h  strategy.cpp  strategy.h  test_backtest.cpp  types.h
src/rest_api/: rest_client.cpp  rest_client.h
src/utils/: config.cpp  config.h  logger.cpp  logger.h
